# merikens-tripcode-engine-v3

./: .gitignore  .travis.yml  BuildAll.sh  BuildAllWithGCC.sh  Dockerfile  README.md
BoostPackages/: BuildBoostForVisualStudio.bat  sp_counted_base_gcc_x86.hpp
BoostPackages/include/boost/process/posix/initializers/: start_in_dir.hpp
CLRadeonExtender/: AUTHORS  README  README.md
CMake/: CMakeLists.txt
SourceFiles/: CMakeLists.txt  CPU10.h  CPU10_AVX2.cpp  CPU10_AVX2Intrinsics.cpp  CPU10_AVXIntrinsics.cpp  CPU10_SSE2Intrinsics.cpp  CPU10_x64_AVX.asm  CPU10_x64_AVX2.asm  CPU10_x64_SSE2.asm  CPU10_x64_SSE2_Nehalem.asm  CPU10_x86_AVX.asm  CPU10_x86_AVX2.asm  CPU10_x86_SSE2.asm  CPU10_x86_SSE2_Nehalem.asm  CPU10_yasm.cpp  CPU12_AVX2Intrinsics.cpp  CPU12_AVXIntrinsics.cpp  CPU12_Intrinsics.h  CPU12_SSE2Intrinsics.cpp  CPU12_x64_AVX.asm  CPU12_x64_AVX2.asm  CPU12_x64_SSE2.asm  CPU12_x64_SSE2_Nehalem.asm  CPU12_x86_AVX.asm  CPU12_x86_AVX2.asm  CPU12_x86_Nehalem.asm  CPU12_x86_SSE2.asm  CPU12_yasm.cpp  CUDA10KernelLauncher0.cu  CUDA10_Registers.cu  CUDA10_Registers_Kernel.h  CUDA10_Registers_Kernel_Common.h  CUDA10_S-boxes.h  CUDA10_SharedMemory.cu  CUDA12.cu  Constants.h  DetectX86.cpp  Macros.h  Main.cpp  MerikensTripcodeEngine.1  (+12 more)
SourceFiles/CUDA10_Registers_MultipleKernels/: CUDA10_Registers_KernelLauncher0.cu  CUDA10_Registers_KernelLauncher1.cu  CUDA10_Registers_KernelLauncher10.cu  CUDA10_Registers_KernelLauncher11.cu  CUDA10_Registers_KernelLauncher12.cu  CUDA10_Registers_KernelLauncher13.cu  CUDA10_Registers_KernelLauncher14.cu  CUDA10_Registers_KernelLauncher15.cu  CUDA10_Registers_KernelLauncher2.cu  CUDA10_Registers_KernelLauncher3.cu  CUDA10_Registers_KernelLauncher4.cu  CUDA10_Registers_KernelLauncher5.cu  CUDA10_Registers_KernelLauncher6.cu  CUDA10_Registers_KernelLauncher7.cu  CUDA10_Registers_KernelLauncher8.cu  CUDA10_Registers_KernelLauncher9.cu  DES_Crypt_0.h  DES_Crypt_1.h  DES_Crypt_10.h  DES_Crypt_11.h  DES_Crypt_12.h  DES_Crypt_13.h  DES_Crypt_14.h  DES_Crypt_15.h  DES_Crypt_16.h  DES_Crypt_17.h  DES_Crypt_18.h  DES_Crypt_19.h  DES_Crypt_2.h  DES_Crypt_20.h  DES_Crypt_21.h  DES_Crypt_22.h  DES_Crypt_23.h  DES_Crypt_24.h  DES_Crypt_25.h  DES_Crypt_26.h  DES_Crypt_27.h  DES_Crypt_28.h  DES_Crypt_29.h  DES_Crypt_3.h  (+40 more)
SourceFiles/OpenCL/: OpenCL10.cl  OpenCL10_AMD_VLIW.cl  OpenCL12.cl  OpenCL12_AMD_VLIW.cl
VisualStudio/: MERIKENsTripcodeEngine.vcxproj.filters  MerikensTripcodeEngine.sln  MerikensTripcodeEngine.vcxproj
WindowsBinaries/: patterns.txt
